fix(dr.melaxin): correct inconsistencies in proposal documents
- Remove 美顔器 from product lineup in strategy.md (confirmed not planned)
- Update related documents links from march/june.md to q1-q4.md
- Fix executive summary Reach numbers to match Reach summary:
  - q1.md: 1.5億 → 1.2億UU
  - q2.md: 1.8億 → 1.4億UU ($10M) / 2.2億UU (with 別枠)
  - q3.md: 1.8億 → 1.5億UU
  - q4.md: 2.0億 → 1.7億UU

--- a/dr.melaxin/proposal/q1.md
+++ b/dr.melaxin/proposal/q1.md
@@ -10,7 +10,7 @@
 | 目標ROAS | 130-180% |
 | メインイベント | **3月Qoo10メガ割** |
 | TikTok本数 | 1,300本（2月300 + 3月1,000） |
-| **総Reach** | **約1.5億（重複込み）** |
+| **総Reach** | **約1.2億UU（重複込み）** |
 
 ---
 
