--- a/dr.melaxin/proposal/q2.md
+++ b/dr.melaxin/proposal/q2.md
@@ -11,7 +11,7 @@
 | 目標ROAS | 280%（$10M枠のみ） |
 | メインイベント | **6月Qoo10メガ割 + ジョングク発表** |
 | TikTok本数 | 1,600本（4月300 + 5月300 + 6月1,000） |
-| **総Reach** | **約1.8億（重複込み）** |
+| **総Reach** | **約1.4億UU（$10M枠）、別枠込み約2.2億UU** |
 
 ---
 
