--- a/dr.melaxin/proposal/q3.md
+++ b/dr.melaxin/proposal/q3.md
@@ -10,7 +10,7 @@
 | 目標ROAS | 200% |
 | メインイベント | **9月Qoo10メガ割 + Drug Store本格参入** |
 | TikTok本数 | 2,000本（7月500 + 8月500 + 9月1,000） |
-| **総Reach** | **約1.8億（重複込み）** |
+| **総Reach** | **約1.5億UU（重複込み）** |
 
 ---
 
