--- a/dr.melaxin/proposal/q4.md
+++ b/dr.melaxin/proposal/q4.md
@@ -10,7 +10,7 @@
 | 目標ROAS | 227% |
 | メインイベント | **11月メガ割 + Black Friday + BestCosme** |
 | TikTok本数 | 2,100本（10月500 + 11月1,000 + 12月600） |
-| **総Reach** | **約2.0億（重複込み）** |
+| **総Reach** | **約1.7億UU（重複込み）** |
 
 ---
 
